[package]
name = "slashed"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"]}
tracing-subscriber = "0.3"
tracing = "0.1"
reqwest = "0.11"
serde_json = "1"
dotenv = "0.15.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"