[package]
name = "slashed"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "signal"]}
reqwest = "0.11"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
